--- a/web/css/layers.css
+++ b/web/css/layers.css
@@ -274,7 +274,7 @@
     width: 978px;
     max-width: 95%;
     & .layer-modal-content {
-      height: calc(100vh - 135px);
+      height: calc(var(--vh, 1vh) * 100 - 135px);
     }
     & .modal-body {
       padding: 0 0 0 10px;
@@ -288,7 +288,7 @@
     width: 98%;
     max-width: 1200px;
     & .layer-modal-content {
-      height: calc(100vh - 155px);
+      height: calc(var(--vh, 1vh) * 100 - 155px);
       display: flex;
       flex-direction: column;
     }
@@ -342,7 +342,7 @@
 
 .layer-list-container {
   overflow-y: auto;
-  padding: 0 2px 0 0;
+  padding: 0;
   &.browse {
     border-right: 1px solid #ccc;
   }
@@ -520,7 +520,7 @@
   .custom-layer-dialog.category-width {
     width: 658px;
     & .modal-body {
-      padding: 0 0 0 6px;
+      padding: 0 0 0 8px;
     }
   }
   .custom-layer-dialog {
@@ -562,14 +562,14 @@
     }
     &.browse-search-width .layer-modal-content {
       padding: 0;
-      height: calc(100vh - 70px);
+      height: calc(var(--vh, 1vh) * 100 - 70px);
     }
     & .product-outter-list-case {
       width: 100%;
-      padding: 0 10px 0 0;
+      padding: 0 6px 0 0;
     }
   }
-  .layer-category {
+  .category-masonry-case .layer-category {
     width: 100%;
   }
   .category-background-cover {
@@ -590,7 +590,6 @@
     }
   }
   .layer-detail-container.search {
-
     border-top: 5px solid #d54e21;
     padding-left: 2px;
     background-image: linear-gradient(#aaa, #ddd 15%);
